--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "printpdf"
+name = "rust_pdfwriter"
 version = "0.3.3"
 authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
 repository = "https://github.com/fschutt/printpdf"
@@ -15,16 +15,16 @@ time = { version = "0.2.11", default-features = false, features = ["std"] }
 log = { version = "0.4.8", optional = true }
 
 [dependencies.image]
-version = "0.24"
+version = "0.25"
 default-features = false
 features = ["gif", "jpeg", "png", "pnm", "tiff", "bmp"]
 optional = true
 
 [features]
-default = ["embedded_images"]
+default = ["images"]
 clippy = []
 logging = ["log"]
-embedded_images = ["image"]
+images = ["image"]
 ico = ["image/ico"]
 tga = ["image/tga"]
 hdr = ["image/hdr"]
